--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,4 +29,4 @@ add_executable(
         source-code/Scene/Scene.h
         source-code/Geometry/TriangleCollection.cpp
         source-code/Geometry/Mesh.cpp source-code/Geometry/Mesh.h
-)
+        source-code/util/MatrixUtils.cpp source-code/util/MatrixUtils.h)
