--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,9 @@ project(raytracer)
 
 set(CMAKE_CXX_STANDARD 14)
 
-#add_executable(raytracer source-code/main.cpp source-code/util/Vector3D.cpp source-code/util/Vector3D.h source-code/RayUtils/Ray.cpp source-code/RayUtils/Ray.h source-code/Geometry/Triangle.cpp source-code/Geometry/Triangle.h source-code/RayUtils/RayIntensityCalculator.cpp source-code/RayUtils/RayIntensityCalculator.h source-code/Geometry/MeshCollection.h source-code/RayUtils/RayBouncer.cpp source-code/RayUtils/RayBouncer.h source-code/Geometry/Mesh.cpp source-code/Geometry/Mesh.h source-code/Materials/Material.h source-code/Materials/EmissiveMaterial.cpp source-code/Materials/EmissiveMaterial.h source-code/Scene/Camera.cpp source-code/Scene/Camera.h source-code/util/Picture.cpp source-code/util/Picture.h source-code/Scene/Scene.cpp source-code/Scene/Scene.h)
+find_package( OpenCV REQUIRED )
+include_directories( ${OpenCV_INCLUDE_DIRS} )
+
 add_executable(
         raytracer
         source-code/main.cpp
@@ -29,4 +31,13 @@ add_executable(
         source-code/Scene/Scene.h
         source-code/Geometry/MeshCollection.cpp
         source-code/Geometry/Mesh.cpp source-code/Geometry/Mesh.h
-        source-code/util/MatrixUtils.cpp source-code/util/MatrixUtils.h source-code/Materials/ReflectiveMaterial.cpp source-code/Materials/ReflectiveMaterial.h source-code/util/Matrix3x3.cpp source-code/util/Matrix3x3.h source-code/Materials/DiffuseMaterial.cpp source-code/Materials/DiffuseMaterial.h source-code/util/HalveUnitSphereVectorGenerator.cpp source-code/util/HalveUnitSphereVectorGenerator.h source-code/Scene/World.cpp source-code/Scene/World.h)
+        source-code/util/MatrixUtils.cpp source-code/util/MatrixUtils.h
+        source-code/Materials/ReflectiveMaterial.cpp source-code/Materials/ReflectiveMaterial.h
+        source-code/util/Matrix3x3.cpp source-code/util/Matrix3x3.h
+        source-code/Materials/DiffuseMaterial.cpp source-code/Materials/DiffuseMaterial.h
+        source-code/util/HalveUnitSphereVectorGenerator.cpp source-code/util/HalveUnitSphereVectorGenerator.h
+        source-code/World/WorldConstantIntensity.cpp source-code/World/WorldConstantIntensity.h
+        source-code/World/World.h
+        source-code/World/WorldHdri.cpp source-code/World/WorldHdri.h)
+
+target_link_libraries( raytracer ${OpenCV_LIBS} )
