--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,4 +29,4 @@ add_executable(
         source-code/Scene/Scene.h
         source-code/Geometry/MeshCollection.cpp
         source-code/Geometry/Mesh.cpp source-code/Geometry/Mesh.h
-        source-code/util/MatrixUtils.cpp source-code/util/MatrixUtils.h source-code/Materials/ReflectiveMaterial.cpp source-code/Materials/ReflectiveMaterial.h source-code/util/Matrix3x3.cpp source-code/util/Matrix3x3.h source-code/Materials/DiffuseMaterial.cpp source-code/Materials/DiffuseMaterial.h source-code/util/HalveUnitSphereVectorGenerator.cpp source-code/util/HalveUnitSphereVectorGenerator.h)
+        source-code/util/MatrixUtils.cpp source-code/util/MatrixUtils.h source-code/Materials/ReflectiveMaterial.cpp source-code/Materials/ReflectiveMaterial.h source-code/util/Matrix3x3.cpp source-code/util/Matrix3x3.h source-code/Materials/DiffuseMaterial.cpp source-code/Materials/DiffuseMaterial.h source-code/util/HalveUnitSphereVectorGenerator.cpp source-code/util/HalveUnitSphereVectorGenerator.h source-code/Geometry/MeshGenerator.cpp source-code/Geometry/MeshGenerator.h source-code/Geometry/MeshTransformer.cpp source-code/Geometry/MeshTransformer.h)
